# people_thinks

./: Concatination Tool.ipynb  README.md  people_thinks.ipynb  pyproject.toml
Data/: Dania.csv  Ghazaleh.csv  Jihad.csv  May.csv  Noura.csv  Razan.csv  Shaima.csv  Shrouq.csv
