[tool.poetry]
name = "peoplethinks"
version = "0.1.0"
description = ""
authors = ["Jadaboawwad <jadabuawwad@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
gensim = "^4.1.2"
numpy = "^1.21.5"
pandas = "^1.3.5"
nltk = "^3.6.6"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
